feat: log-agent、log-manager、log-stream some code optimizations